@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite  (Git)
 
 pts-core: Add OS TestType
+pts-core: Don't show Vulkan options if Vulkan support is known to be unavailable/broken
 
 Phoronix Test Suite 10.0.0 Milestone 2
 12 September 2020
